--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,27 @@ ul li a {
 ul li a:hover {
   color: #C0C0C0;
 }
+
+section {
+  padding: 5px;
+  margin: 5px;
+  border: double 4px black;
+}
+
+section article {
+  border: 3px solid black;
+  border-radius: 0px 20px 20px 20px;
+  margin: 5px 10px 5px 10px;
+  padding: 10px;
+  background: white;
+}
+
+footer {
+  background: #F0F0F0;
+}
+
+footer h3 {
+  text-align: center;
+  font-weight: normal;
+  font-size: 90%;
+}
